--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit
 pandas
-numpy
 matplotlib
 seaborn
 scikit-learn
@@ -11,4 +10,5 @@ openpyxl
 stable-baselines3
 gymnasium
 keras
-tensorflow
+tensorflow==2.11.0
+numpy==1.23.5
