--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit
+tensorflow==2.11.0
 pandas
 matplotlib
 seaborn
@@ -10,5 +11,4 @@ openpyxl
 stable-baselines3
 gymnasium
 keras
-tensorflow==2.11.0
-numpy==1.23.5
+numpy
